fix: refactor story data structure and update visibility logic in ProfilePage component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,14 +30,11 @@ body {
   clip-path: polygon(100% 0%, 100% 100%, 0% 0%);
 }
 
-.wavy{
-  /* mask created with 
-  https://css-generators.com/wavy-shapes/ */
 
-  background: #000000;
+.wavy {
   --mask:
-    radial-gradient(61.77px at 50% calc(100% - 84px),#000 99%,#0000 101%) calc(50% - 60px) 0/120px 100%,
-    radial-gradient(61.77px at 50% calc(100% + 54px),#0000 99%,#000 101%) 50% calc(100% - 30px)/120px 100% repeat-x;
+    radial-gradient(26.85px at 50% calc(100% - 37.4px), #000 99%, #0000 101%) calc(50% - 44px) 0/88px 100%,
+    radial-gradient(26.85px at 50% calc(100% + 15.4px), #0000 99%, #000 101%) 50% calc(100% - 22px)/88px 100% repeat-x;
   -webkit-mask: var(--mask);
           mask: var(--mask);
 }
